bindings/pydrake/multibody/test/model_directives_to_sdformat_files/errors/world_base_frame.error_regex
Adding a frame using base_frame=\[world\] is not supported.
